--- a/assets/sass/components/_general.scss
+++ b/assets/sass/components/_general.scss
@@ -23,7 +23,7 @@
 
 	.site-content {
 		float: left;
-		width: 55%;
+		width: 66%;
 	}
 	.main-navigation {
 		li a:hover {
